fix: fixed SelectField on mobile

--- a/src/ui/SelectField/SelectField.module.scss
+++ b/src/ui/SelectField/SelectField.module.scss
@@ -13,6 +13,8 @@
     }
 
   &.active {
+    z-index: 2;
+
     .selectField {
       &__label {
         color: var(--primary-color);
